loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:6: error: '(' expected but identifier found.
    if estSurBiscuit()==true {
       ^Poucet1:9: error: illegal start of simple expression
  }
  ^Poucet1:10: error: '(' expected but identifier found.
  if biscuit < 3 {
     ^Poucet1:15: error: illegal start of simple expression
} while (sortieTrouvee()==false) 
^